--- a/_config.yml
+++ b/_config.yml
@@ -23,11 +23,11 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Yifei Sun"
   avatar           : "images/profile.jpg"
-  bio              : "Lorem ipsum College"
+  bio              : "Research Assistant at HKUST(GZ)"
   #location         : "Beijing, China"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
+  googlescholar    : "https://scholar.google.com/citations?user=J49kATMAAAAJ&hl=zh-CN"
   email            : "sophias612@outlook.com"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
