--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,8 +21,8 @@ main:
   - title: "Publications"
     url: "/#-publications"
 
-  - title: "Software"
-    url: "/#-software"
+# - title: "Software"
+#   url: "/#-software"
 
-  - title: "Miscellaneous"
-    url: "/#-miscellaneous"
+#  - title: "Miscellaneous"
+#   url: "/#-miscellaneous"
