--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : #"Lorem ipsum"
-description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
+description              : #"Research assistant in HKUST(GZ). Focusing on  "
 repository               : "miaomiao612/miaomiao612.github.io"
 google_scholar_stats_use_cdn : true
 
