--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,15 +11,18 @@ main:
 
   - title: "Educations"
     url: "/#-educations"
-
+    
+  - title: "Publications"
+    url: "/#-publications"
+    
 #  - title: "Invited Talks"
 #    url: "/#-invited-talks"
 
   - title: "Experiences"
     url: "/#-experiences"
 
-  - title: "Publications"
-    url: "/#-publications"
+ - title: "Projects"
+    url: "/#-projects"
 
 # - title: "Software"
 #   url: "/#-software"
