--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
-  - title: "About Me"
-    url: "/#about-me"
+   - title: "About Me"
+     url: "/#About-me"
 
 #  - title: "News"
 #    url: "/#-news"
@@ -9,23 +9,26 @@ main:
 #  - title: "Honors and Awards"
 #    url: "/#-honors-and-awards"
 
-  - title: "Educations"
-    url: "/#-educations"
+   - title: "Educations"
+     url: "/#-Educations"
     
-  - title: "Publications"
-    url: "/#-publications"
+   - title: "Publications"
+     url: "/#-Publications"
     
 #  - title: "Invited Talks"
-#    url: "/#-invited-talks"
+#    url: "/#-Invited-talks"
 
-  - title: "Experiences"
-    url: "/#-experiences"
+   - title: "Experiences"
+     url: "/#-Experiences"
 
- - title: "Projects"
-    url: "/#-projects"
+   - title: "Projects"
+     url: "/#-Projects"
 
-# - title: "Software"
-#   url: "/#-software"
+   - title: "Honors and Awards"
+     url: "/#-Honors and Awards"
+
+   - title: "Presentations"
+     url: "/#-Presentations"
 
 #  - title: "Miscellaneous"
 #   url: "/#-miscellaneous"
