--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,16 @@
 # main links links
 main:
    - title: "About Me"
-     url: "/#About-me"
+     url: "#-About-me"
 
 #  - title: "News"
-#    url: "/#-news"
+#    url: "#-news"
 
 #  - title: "Honors and Awards"
 #    url: "/#-honors-and-awards"
 
    - title: "Educations"
-     url: "/#-Educations"
+     url: "#-Educations"
     
    - title: "Publications"
      url: "/#-Publications"
