--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
 main:
    - title: "About Me"
-     url: "#-About-me"
+     url: "#About-me"
 
 #  - title: "News"
 #    url: "#-news"
@@ -10,25 +10,25 @@ main:
 #    url: "/#-honors-and-awards"
 
    - title: "Educations"
-     url: "#-Educations"
+     url: "#Educations"
     
    - title: "Publications"
-     url: "/#-Publications"
+     url: "#Publications"
     
 #  - title: "Invited Talks"
 #    url: "/#-Invited-talks"
 
    - title: "Experiences"
-     url: "/#-Experiences"
+     url: "#Experiences"
 
    - title: "Projects"
-     url: "/#-Projects"
+     url: "#Projects"
 
    - title: "Honors and Awards"
-     url: "/#-Honors and Awards"
+     url: "#Honors and Awards"
 
    - title: "Presentations"
-     url: "/#-Presentations"
+     url: "#Presentations"
 
 #  - title: "Miscellaneous"
 #   url: "/#-miscellaneous"
