--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : #"Yifei Sun"
-description              : #"Research assistant in HKUST(GZ). Focusing on  "
+description              : "  "
 repository               : "miaomiao612/miaomiao612.github.io"
 google_scholar_stats_use_cdn : true
 
